k8s.ev-backend-service.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: ev-backend
  name: ev-backend-service
spec:
  externalTrafficPolicy: Cluster
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    run: ev-backend
  sessionAffinity: None
  type: NodePort
