k8s.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: charging-attendant
spec:
  tls:
    - hosts:
      - ev-backend.charging-attendant.com
      - ev-frontend.charging-attendant.com
      - charging-attendant.com
      secretName: tls-secret
  rules:
  - host: ev-backend.charging-attendant.com
    http:
      paths:
      - backend:
          serviceName: ev-backend-service
          servicePort: 8080
